--- a/helm/revproxy/templates/ingress_dev.yaml
+++ b/helm/revproxy/templates/ingress_dev.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.ingress.enabled -}}
 {{- if and (eq .Values.global.dev true) (eq .Values.global.aws.enabled false) }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -20,3 +21,4 @@ spec:
                 port:
                   number: 80
   {{- end  }}
+{{- end  }}
