--- a/helm/tube/templates/deployment.yaml
+++ b/helm/tube/templates/deployment.yaml
@@ -105,7 +105,7 @@ spec:
           - name: DICTIONARY_URL
             value: http://revproxy-service/dictionary_schema
           - name: ES_URL
-            value: development-es
+            value: gen3-elasticsearch-master
           - name: ES_INDEX_NAME
             value: dev_etl
           - name: HADOOP_URL
