--- a/helm/tube/values.yaml
+++ b/helm/tube/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: quay.io/cdis/tube
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "2023.10"
+  tag: "stable"
 
 imagePullSecrets: []
 nameOverride: ""
