add NV policy chart and values configs

--- a/helm/gen3/values.yaml
+++ b/helm/gen3/values.yaml
@@ -399,3 +399,7 @@ elasticsearch:
   esConfig:
     elasticsearch.yml: |
       # Here we can add elasticsearch config
+
+
+neuvectorPolicies:
+  enabled: false
