--- a/helm/fence/fence-user-yaml/USER_YAML.yaml
+++ b/helm/fence/fence-user-yaml/USER_YAML.yaml
@@ -724,8 +724,8 @@ users:
     - sower
     - indexd_admin
     - ttyadmin
-    - services.sheepdog-admin
-    - services.peregrine-admin
+    # - services.sheepdog-admin
+    # - services.peregrine-admin
     - programs.rutgers-admin
     projects:
     - auth_id: rutgers
