--- a/helm/neuvector/templates/guppy-nvsecurityrule.yaml
+++ b/helm/neuvector/templates/guppy-nvsecurityrule.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.policies.include }}
 apiVersion: neuvector.com/v1
 kind: NvSecurityRule
 metadata:
@@ -110,7 +111,7 @@ spec:
   process_profile:
     baseline: zero-drift
   target:
-    policymode: {{ .Values.POLICY_MODE }}
+    policymode: {{ .Values.policies.policyMode }}
     selector:
       comment: ""
       criteria:
@@ -125,3 +126,4 @@ spec:
   waf:
     settings: []
     status: true
+{{- end }}
