--- a/helm/neuvector/templates/revproxy-nvsecurityrule.yaml
+++ b/helm/neuvector/templates/revproxy-nvsecurityrule.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.policies.include }}
 apiVersion: neuvector.com/v1
 kind: NvSecurityRule
 metadata:
@@ -156,7 +157,7 @@ spec:
   process_profile:
     baseline: zero-drift
   target:
-    policymode: {{ .Values.POLICY_MODE }}
+    policymode: {{ .Values.policies.policyMode }}
     selector:
       comment: ""
       criteria:
@@ -171,3 +172,4 @@ spec:
   waf:
     settings: []
     status: true
+{{- end }}
