--- a/helm/neuvector/values.yaml
+++ b/helm/neuvector/values.yaml
@@ -1,4 +1,4 @@
-# Default values for neuvector-policies.
+# Default values for neuvector.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -7,6 +7,14 @@
 nameOverride: ""
 fullnameOverride: ""
 
+policies:
+  # deploy predefined Neuvector policies for Gen3
+  include: true
+  # Neuvector policy enforcement mode
+  # Discover, Monitor, or Protect
+  # dev: Monitor
+  # prod: Protect
+  policyMode: Monitor
 
 # hostname/service name for our DB
 DB_HOST: development-gen3-postgresql
@@ -14,11 +22,7 @@ DB_HOST: development-gen3-postgresql
 # Prefix for relevant services deployed through Argo
 ARGOCD_PREFIX: development-gen3
 
-# Neuvector policy enforcement mode
-# dev: Monitor
-# prod: Protect
-POLICY_MODE: Monitor # Protect
-
+# Configure your ingress controller information for enabling ingress to containers
 ingress:
   # service name of your ingress controller
   controller: nginx-ingress-controller
