--- a/helm/neuvector/Chart.yaml
+++ b/helm/neuvector/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: neuvector-policies
+name: neuvector
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,3 +22,8 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+# dependencies:
+# - name: neuvector
+#   version: "5.2.2-s1"
+#   repository: "https://neuvector.github.io/neuvector-helm/core"
