--- a/helm/neuvector/templates/indexd-nvsecurityrule.yaml
+++ b/helm/neuvector/templates/indexd-nvsecurityrule.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.policies.include }}
 apiVersion: neuvector.com/v1
 kind: NvSecurityRule
 metadata:
-  name: nv.pidgin-deployment.{{ .Release.Namespace }}
+  name: nv.indexd-deployment.{{ .Release.Namespace }}
 spec:
   dlp:
     settings: []
@@ -10,7 +11,7 @@ spec:
   - action: allow
     applications:
     - DNS
-    name: nv.kube-dns.kube-system-egress-27
+    name: nv.kube-dns.kube-system-egress-20
     ports: any
     priority: 0
     selector:
@@ -29,46 +30,79 @@ spec:
   - action: allow
     applications:
     - HTTP
-    name: nv.pidgin-deployment.{{ .Release.Namespace }}-ingress-63
+    name: nv.indexd-deployment.{{ .Release.Namespace }}-ingress-49
     ports: any
     priority: 0
     selector:
       comment: ""
       name: Workload:ingress
       original_name: ""
+  - action: allow
+    applications:
+    - SSL
+    name: nv.indexd-deployment.{{ .Release.Namespace }}-ingress-50
+    ports: any
+    priority: 0
+    selector:
+      comment: ""
+      criteria: []
+      name: external
+      original_name: ""
+  - action: allow
+    applications:
+    - HTTP
+    name: nv.indexd-deployment.{{ .Release.Namespace }}-ingress-51
+    ports: any
+    priority: 0
+    selector:
+      comment: ""
+      criteria:
+      - key: service
+        op: =
+        value: revproxy-deployment.{{ .Release.Namespace }}
+      - key: domain
+        op: =
+        value: {{ .Release.Namespace }}
+      name: nv.revproxy-deployment.{{ .Release.Namespace }}
+      original_name: ""
+  - action: allow
+    applications:
+    - HTTP
+    name: nv.indexd-deployment.{{ .Release.Namespace }}-ingress-52
+    ports: any
+    priority: 0
+    selector:
+      comment: ""
+      criteria:
+      - key: service
+        op: =
+        value: sheepdog-deployment.{{ .Release.Namespace }}
+      - key: domain
+        op: =
+        value: {{ .Release.Namespace }}
+      name: nv.sheepdog-deployment.{{ .Release.Namespace }}
+      original_name: ""
   process:
   - action: allow
     allow_update: false
-    name: basename
-    path: /usr/bin/basename
+    name: bash
+    path: /bin/bash
   - action: allow
     allow_update: false
     name: chmod
     path: /bin/chmod
   - action: allow
     allow_update: false
-    name: dash
-    path: /bin/dash
+    name: chown
+    path: /bin/chown
   - action: allow
     allow_update: false
     name: dockerrun.sh
     path: /bin/dash
   - action: allow
     allow_update: false
-    name: find
-    path: /usr/bin/find
-  - action: allow
-    allow_update: false
-    name: grep
-    path: /bin/grep
-  - action: allow
-    allow_update: false
     name: mkdir
     path: /bin/mkdir
-  - action: allow
-    allow_update: false
-    name: mktemp
-    path: /bin/mktemp
   - action: allow
     allow_update: false
     name: mv
@@ -83,10 +117,6 @@ spec:
     path: /pause
   - action: allow
     allow_update: false
-    name: readlink
-    path: /bin/readlink
-  - action: allow
-    allow_update: false
     name: rm
     path: /bin/rm
   - action: allow
@@ -95,39 +125,28 @@ spec:
     path: /bin/run-parts
   - action: allow
     allow_update: false
-    name: sed
-    path: /bin/sed
-  - action: allow
-    allow_update: false
     name: sh
     path: /bin/dash
   - action: allow
     allow_update: false
-    name: sort
-    path: /usr/bin/sort
-  - action: allow
-    allow_update: false
     name: uwsgi
     path: /usr/local/bin/uwsgi
-  - action: allow
-    allow_update: false
-    name: wc
-    path: /usr/bin/wc
   process_profile:
     baseline: zero-drift
   target:
-    policymode: {{ .Values.POLICY_MODE }}
+    policymode: {{ .Values.policies.policyMode }}
     selector:
       comment: ""
       criteria:
       - key: service
         op: =
-        value: pidgin-deployment.{{ .Release.Namespace }}
+        value: indexd-deployment.{{ .Release.Namespace }}
       - key: domain
         op: =
         value: {{ .Release.Namespace }}
-      name: nv.pidgin-deployment.{{ .Release.Namespace }}
+      name: nv.indexd-deployment.{{ .Release.Namespace }}
       original_name: ""
   waf:
     settings: []
     status: true
+{{- end }}
