--- a/helm/neuvector/templates/wts-nvsecurityrule.yaml
+++ b/helm/neuvector/templates/wts-nvsecurityrule.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.policies.include }}
 apiVersion: neuvector.com/v1
 kind: NvSecurityRule
 metadata:
-  name: nv.ambassador-deployment.{{ .Release.Namespace }}
+  name: nv.wts-deployment.{{ .Release.Namespace }}
 spec:
   dlp:
     settings: []
@@ -10,7 +11,7 @@ spec:
   - action: allow
     applications:
     - DNS
-    name: nv.kube-dns.kube-system-egress-0
+    name: nv.kube-dns.kube-system-egress-2
     ports: any
     priority: 0
     selector:
@@ -26,22 +27,45 @@ spec:
       original_name: ""
   - action: allow
     applications:
-    - SSL
-    name: external-egress-1
+    - HTTP
+    name: nv.fence-deployment.{{ .Release.Namespace }}-egress-3
     ports: any
     priority: 0
     selector:
       comment: ""
-      criteria: []
-      name: external
+      criteria:
+      - key: service
+        op: =
+        value: fence-deployment.{{ .Release.Namespace }}
+      - key: domain
+        op: =
+        value: {{ .Release.Namespace }}
+      name: nv.fence-deployment.{{ .Release.Namespace }}
+      original_name: ""
+  - action: allow
+    applications:
+    - PostgreSQL
+    name: nv.{{ .Values.DB_HOST }}.{{ .Release.Namespace }}-egress-4
+    ports: any
+    priority: 0
+    selector:
+      comment: ""
+      criteria:
+      - key: service
+        op: =
+        value: {{ .Values.DB_HOST }}.{{ .Release.Namespace }}
+      - key: domain
+        op: =
+        value: {{ .Release.Namespace }}
+      name: nv.{{ .Values.DB_HOST }}.{{ .Release.Namespace }}
       original_name: ""
   file: []
   ingress:
   - action: allow
     applications:
-    - HTTP
-    name: nv.ambassador-deployment.{{ .Release.Namespace }}-ingress-6
-    ports: any
+    - any
+    name: nv.wts-deployment.{{ .Release.Namespace }}-ingress-11
+    ports: tcp/80
     priority: 0
     selector:
       comment: ""
@@ -50,24 +74,7 @@ spec:
   - action: allow
     applications:
     - SSL
-    name: nv.ambassador-deployment.{{ .Release.Namespace }}-ingress-7
-    ports: any
-    priority: 0
-    selector:
-      comment: ""
-      criteria:
-      - key: service
-        op: =
-        value: hatchery-deployment.{{ .Release.Namespace }}
-      - key: domain
-        op: =
-        value: {{ .Release.Namespace }}
-      name: nv.hatchery-deployment.{{ .Release.Namespace }}
-      original_name: ""
-  - action: allow
-    applications:
-    - SSL
-    name: nv.ambassador-deployment.{{ .Release.Namespace }}-ingress-8
+    name: nv.wts-deployment.{{ .Release.Namespace }}-ingress-12
     ports: any
     priority: 0
     selector:
@@ -78,7 +85,7 @@ spec:
   - action: allow
     applications:
     - HTTP
-    name: nv.ambassador-deployment.{{ .Release.Namespace }}-ingress-9
+    name: nv.wts-deployment.{{ .Release.Namespace }}-ingress-13
     ports: any
     priority: 0
     selector:
@@ -94,117 +101,99 @@ spec:
       original_name: ""
   - action: allow
     applications:
-    - any
-    name: nv.ambassador-deployment.{{ .Release.Namespace }}-ingress-10
-    ports: tcp/8080
+    - HTTP
+    name: nv.wts-deployment.{{ .Release.Namespace }}-ingress-14
+    ports: any
     priority: 0
     selector:
       comment: ""
-      criteria:
-      - key: service
-        op: =
-        value: revproxy-deployment.{{ .Release.Namespace }}
-      - key: domain
-        op: =
-        value: {{ .Release.Namespace }}
-      name: nv.revproxy-deployment.{{ .Release.Namespace }}
+      name: Workload:ingress
       original_name: ""
   process:
   - action: allow
     allow_update: false
-    name: ambex
-    path: /opt/ambassador/bin/ambassador
+    name: alembic
+    path: /usr/local/bin/python3.9
   - action: allow
     allow_update: false
-    name: bash
-    path: /bin/bash
+    name: basename
+    path: /usr/bin/basename
   - action: allow
     allow_update: false
-    name: busybox
-    path: /bin/busybox
+    name: chmod
+    path: /bin/chmod
   - action: allow
     allow_update: false
-    name: curl
-    path: /usr/bin/curl
-  - action: allow
-    allow_update: false
-    name: date
-    path: /bin/busybox
-  - action: allow
-    allow_update: false
-    name: diagd
-    path: /usr/bin/python3.7
-  - action: allow
-    allow_update: false
-    name: env
-    path: /bin/busybox
-  - action: allow
-    allow_update: false
-    name: envoy
-    path: /usr/local/bin/envoy
+    name: dockerrun.sh
+    path: /bin/dash
   - action: allow
     allow_update: false
     name: find
-    path: /bin/busybox
-  - action: allow
-    allow_update: false
-    name: grep
-    path: /bin/busybox
+    path: /usr/bin/find
   - action: allow
     allow_update: false
     name: mkdir
-    path: /bin/busybox
+    path: /bin/mkdir
+  - action: allow
+    allow_update: false
+    name: mv
+    path: /bin/mv
+  - action: allow
+    allow_update: false
+    name: nginx
+    path: /usr/sbin/nginx
   - action: allow
     allow_update: false
     name: pause
     path: /pause
   - action: allow
     allow_update: false
-    name: python
-    path: /usr/bin/python3.7
+    name: readlink
+    path: /bin/readlink
   - action: allow
     allow_update: false
-    name: python3
-    path: /usr/bin/python3.7
+    name: rm
+    path: /bin/rm
+  - action: allow
+    allow_update: false
+    name: run-parts
+    path: /bin/run-parts
+  - action: allow
+    allow_update: false
+    name: sed
+    path: /bin/sed
   - action: allow
     allow_update: false
     name: sh
-    path: /bin/busybox
-  - action: allow
-    allow_update: false
-    name: sleep
-    path: /bin/busybox
+    path: /bin/dash
   - action: allow
     allow_update: false
     name: sort
-    path: /bin/busybox
+    path: /usr/bin/sort
   - action: allow
     allow_update: false
-    name: uname
-    path: /bin/busybox
-  - action: allow
-    allow_update: false
-    name: watt
-    path: /opt/ambassador/bin/ambassador
+    name: uwsgi
+    path: /usr/local/bin/uwsgi
   - action: allow
     allow_update: false
     name: wc
-    path: /bin/busybox
+    path: /usr/bin/wc
   process_profile:
     baseline: zero-drift
   target:
-    policymode: {{ .Values.POLICY_MODE }}
+    policymode: {{ .Values.policies.policyMode }}
     selector:
       comment: ""
       criteria:
       - key: service
         op: =
-        value: ambassador-deployment.{{ .Release.Namespace }}
+        value: wts-deployment.{{ .Release.Namespace }}
       - key: domain
         op: =
         value: {{ .Release.Namespace }}
-      name: nv.ambassador-deployment.{{ .Release.Namespace }}
+      name: nv.wts-deployment.{{ .Release.Namespace }}
       original_name: ""
   waf:
     settings: []
     status: true
+{{- end }}
