--- a/helm/gen3/Chart.yaml
+++ b/helm/gen3/Chart.yaml
@@ -104,11 +104,6 @@ dependencies:
   version: "0.1.4"
   repository: "file://../spark"
   condition: spark.enabled
-- name: neuvector
-  version: "0.1.0"
-  repository: "file://../neuvector"
-  condition: neuvector.enabled
-
 
 - name: elasticsearch
   version: 7.10.2
@@ -118,6 +113,16 @@ dependencies:
   version: 11.9.13
   repository: "https://charts.bitnami.com/bitnami"
   condition: global.dev
+
+# (optional) NeuVector Kubernetes Security Policy templates to protect Gen3
+#   NeuVector must be installed separately.
+#   Reference: https://open-docs.neuvector.com/basics/overview
+#   Reference: https://github.com/neuvector/neuvector-helm
+# For more information, please use the Gen3 community Slack.
+- name: neuvector
+  version: "0.1.0"
+  repository: "file://../neuvector"
+  condition: neuvector.enabled
 
 # A chart can be either an 'application' or a 'library' chart.
 #
