--- a/helm/gen3/values.yaml
+++ b/helm/gen3/values.yaml
@@ -400,6 +400,11 @@ elasticsearch:
     elasticsearch.yml: |
       # Here we can add elasticsearch config
 
+# (optional) NeuVector Kubernetes Security Policy templates to protect Gen3
+#   NeuVector must be installed separately.
+#   Reference: https://open-docs.neuvector.com/basics/overview
+#   Reference: https://github.com/neuvector/neuvector-helm
+# For more information, please use the Gen3 community Slack.
 neuvector:
   # install Neuvector
   enabled: false
