--- a/helm/neuvector/Chart.yaml
+++ b/helm/neuvector/Chart.yaml
@@ -1,7 +1,11 @@
 apiVersion: v2
 name: neuvector
-description: A Helm chart for Kubernetes
+description: NeuVector Kubernetes Security Policy templates to protect Gen3
 
+# NeuVector must be installed separately.
+#   Reference: https://open-docs.neuvector.com/basics/overview
+#   Reference: https://github.com/neuvector/neuvector-helm
+# For more information, please use the Gen3 community Slack.
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -23,6 +27,7 @@ version: 0.1.0
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
 
+# Todo: Evaluate inclusion of NeuVector installation
 # dependencies:
 # - name: neuvector
 #   version: "5.2.2-s1"
